--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,13 @@ node_js: 12
 os: linux
 dist: xenial
 
+branches:
+  only:
+  - master
+  - develop
+
 stages:
-- Build
+  - name: Build
 
 jobs:
   include:
